- Moved registerUser logic from UserController to UserServiceImpl. - Updated UserService to accept UserDTO. - Improved separation of concerns and simplified controller logic - cleaned up the code